[package]
name = "prefix_checkers"
version = "0.1.0"
authors = ["Sam Schlinkert <sschlinkert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fst = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "prefixers"
harness = false
